[package]
name = "token-service"
version = "0.1.0"
edition = "2021"
authors = ["julio-nogueira"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: add features = ["openssl"] to actix-web dependency
[dependencies]
rustls = "0.21.1"
actix-web = {version = "4.3.1", features = ["rustls"]}
dotenv = "0.15.0"
futures = "0.3.28"
serde = "1.0.163"
serde_json = "~1.0"
totp-rs = "5.0.2"
uuid = { version = "1.3.3", features = ["v4", "serde"]}
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
tokio = { version = "1.28.1", features = ["full"] }
actix-web-opentelemetry = "0.13.0"


[profile.release]
lto = true
codegen-units = 1