[package]
name = "mfa-service"
version = "0.1.0"
edition = "2021"
authors = ["julio-nogueira"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: add features = ["openssl"] to actix-web dependency
[dependencies]
# Actix
actix-web = {version = "4.3.1", features = ["rustls"]}
actix-cors = "0.6.4"

dotenv = "0.15.0"
futures = "0.3.28"
serde =  { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
totp-rs = { version = "5.0.2", features = ["gen_secret"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
uuid = {version = "1.4.0", features = ["serde", "v4", "fast-rng"]}
tokio = { version = "1.29.1", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"]}
clap    = "4.4.1"
simple_logger = "4.2.0"
log = "*"
bincode = "*"

# Open API (with utoipa)
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }



# Opentelemetry and Prometheus
#opentelemetry ={ version = "0.20.0", features = ["trace", "rt-tokio-current-thread"]}
#opentelemetry_api = "0.20.0"
#opentelemetry_sdk = "0.20.0"
#opentelemetry-otlp = { version = "0.13", features = ["default"] }

[dependencies.rdkafka]
version     = "0.34.0"
features    = ["ssl", "sasl"]

[profile.release]
lto = true
codegen-units = 1
